--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,7 @@
 
 // https://mmistakes.github.io/minimal-mistakes/docs/stylesheets/#customizing
 // $sans-serif: 'Noto Sans KR';
-$sans-serif: 'Nanum Gothic Coding';
+$sans-serif: 'Nanum Gothic';
 $monospace: 'Ubuntu Mono';
 $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 
@@ -20,7 +20,8 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 
 // @import url(https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu+Mono);
 
-@import url(https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap&subset=korean); 
+//@import url(https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap&subset=korean); 
+@import url(https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100&display=swap);
 
 
 //https://github.com/mmistakes/minimal-mistakes/issues/1219
@@ -48,8 +49,8 @@ html {
 .language-plaintext {
   font-family: $monospace;
   // color: mix(#FFBF00,$primary-color, 40%);
-  //color: #FFBF00; //한줄 코드 text색
-  color: #ff0000; //한줄 코드 text색
+  color: #FFBF00; //한줄 코드 text색
+  //color: #ff0000; //한줄 코드 text색
 
   font-size: $type-size-5;
   background: #4D5357;  //한줄 코드 background색
