--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,8 +21,7 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 // @import url(https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu+Mono);
 
 //@import url(https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap&subset=korean); 
-@import url(https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100&display=swap);
-
+@import url(https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap);
 
 //https://github.com/mmistakes/minimal-mistakes/issues/1219
 html {
