--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,8 @@
   </style>
 <![endif]-->
 
-<!-- {% if site.head_scripts %}
+{% if site.head_scripts %}
   {% for script in site.head_scripts %}
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
-{% endif %} -->
+{% endif %}
