--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -65,8 +65,8 @@ $background-color: #fff !default;
 $code-background-color: #fafafa !default;
 $code-background-color-dark: $light-gray !default;
 $text-color: $dark-gray !default;
-// $muted-text-color: mix(#fff, $text-color, 20%) !default;
-$muted-text-color: #d67f05 !default;
+$muted-text-color: mix(#fff, $text-color, 20%) !default;
+//$muted-text-color: #d67f05 !default;
 $border-color: $lighter-gray !default;
 $form-background-color: $lighter-gray !default;
 $footer-background-color: $lighter-gray !default;
