--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   MASTHEAD
+   MASTHEAD 내꺼
    ========================================================================== */
 
 .masthead {
@@ -10,12 +10,13 @@
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
   z-index: 20;
-  padding-bottom: 3.5em;
+  // padding-bottom: 3.5em;
 
   &__inner-wrap {
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
+    // padding: 0.4em;
     padding: 0.4em;
     max-width: 100%;
     display: -webkit-box;
@@ -51,13 +52,13 @@
   -ms-flex-item-align: center;
   align-self: center;
   font-weight: bold;
-  font-size: $type-size-5;
+  // font-size: $type-size-1;
   // z-index: 20;
 }
 
 .site-subtitle {
   display: block;
-  font-size: $type-size-5;
+  font-size: $type-size-8;
 }
 
 .masthead__menu {
