--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -34,8 +34,8 @@
 .archive__subtitle {
   margin: 1.414em 0 0.5em;
   padding-bottom: 0.5em;
-  font-size: $type-size-1;
-  color: $muted-text-color;
+  font-size: $type-size-1;//home화면의 Recent Posts의 폰트 크기
+  color: $rss-color;
   border-bottom: 1px solid $border-color;
 
   + .list__item .archive__item-title {
