--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -32,7 +32,7 @@
 }
 
 .archive__subtitle {
-  margin: 1.414em 0 0.5em;
+  //margin: 1.414em 0 0.5em;
   padding-bottom: 0.5em;
   font-size: $type-size-3;//home화면의 Recent Posts의 폰트 크기
   color: $rss-color;
@@ -126,7 +126,7 @@
 
 .list__item {
   .page__meta {
-    margin: 0 0 4px;
+    //margin: 0 0 4px;
     font-size: 0.6em;
   }
 }
