--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   ARCHIVE
+   ARCHIVE 내꺼
    ========================================================================== */
 
 .archive {
@@ -32,7 +32,7 @@
 }
 
 .archive__subtitle {
-  //margin: 1.414em 0 0.5em;
+  margin: 1.414em 0 0.5em;
   padding-bottom: 0.5em;
   font-size: $type-size-3;//home화면의 Recent Posts의 폰트 크기
   color: $rss-color;
@@ -45,7 +45,8 @@
 
 .archive__item-title {
   margin-bottom: 0.25em;
-  font-family: $sans-serif-narrow;
+  // font-family: $sans-serif-narrow;
+  font-family: 'Jeju Myeongjo', serif;
   line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -102,7 +103,8 @@
   margin: 0 auto;
   padding: 2px 5px;
   color: #fff;
-  font-family: $caption-font-family;
+  // font-family: $caption-font-family;
+  font-family: 'Jeju Myeongjo', serif;
   font-size: $type-size-8;
   background: #000;
   text-align: right;
@@ -126,7 +128,7 @@
 
 .list__item {
   .page__meta {
-    //margin: 0 0 4px;
+    margin: 0 0 4px;
     font-size: 0.6em;
   }
 }
