--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,6 +24,7 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 //@import url(https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap);
 
 @import url(https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap);
+@import url(http://fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
 
 
 
