--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -44,8 +44,9 @@
 }
 
 .archive__item-title {
-  margin-bottom: 0.25em;
+  //margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
+  padding-bottom: 0.5em;
   line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
