--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -33,7 +33,7 @@
 
 .archive__subtitle {
   margin: 1.414em 0 0.5em;
-  padding-bottom: 0.5em;
+  //padding-bottom: 0.5em;
   font-size: $type-size-3;//home화면의 Recent Posts의 폰트 크기
   color: $rss-color;
   border-bottom: 1px solid $border-color;
