--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -14,10 +14,12 @@
 
   &__inner-wrap {
     @include clearfix;
-    margin-left: auto;
+    margin-left: 20em;
+    margin-top: 20em;
     margin-right: auto;
     // padding: 0.4em;
-    padding: 1em;
+    //padding-left: 20em;
+    padding-bottom: 5em;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -90,6 +92,6 @@
 
   &--lg {
     padding-right: 2em;
-    font-weight: 700;
+    font-weight: 1700;
   }
 }
