--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -14,12 +14,13 @@
 
   &__inner-wrap {
     @include clearfix;
-    margin-left: 20em;
     margin-top: 1%;
+    margin-bottom: 1%;
+    margin-left: auto;
     margin-right: auto;
     // padding: 0.4em;
     //padding-left: 20em;
-    padding-bottom: 0.5em;
+    //padding-bottom: 0.5em;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
