--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -15,7 +15,7 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    // padding: 0.4em;
+    padding: 0.5em;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -25,7 +25,7 @@
     justify-content: space-between;
     // font-family: $sans-serif-narrow;
     font-family: 'Jeju Myeongjo', serif;
-    font-size: $type-size-1;
+    font-size: $type-size-3;
 
     @include breakpoint($x-large) {
       max-width: $max-width;
