--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -25,7 +25,8 @@
     justify-content: space-between;
     // font-family: $sans-serif-narrow;
     font-family: 'Jeju Myeongjo', serif;
-    font-size: $type-size-4;
+    font-weight: bold;
+    font-size: $type-size-3;
 
     @include breakpoint($x-large) {
       max-width: $max-width;
