--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -24,8 +24,9 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     // font-family: $sans-serif-narrow;
-    font-family: 'Jeju Myeongjo', serif;
-    font-weight: bold;
+    //font-family: 'Jeju Myeongjo', serif;
+    font-family: 'Righteous', cursive;
+    //font-weight: bold;
     font-size: $type-size-3;
 
     @include breakpoint($x-large) {
