--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -38,7 +38,7 @@
   font-size: $type-size-3;//home화면의 Recent Posts의 폰트 크기
   color: $rss-color;
   border-bottom: 1px solid $border-color;
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Bungee', cursive;
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
