--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -25,7 +25,7 @@
     justify-content: space-between;
     // font-family: $sans-serif-narrow;
     //font-family: 'Jeju Myeongjo', serif;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Righteous', cursive;
     //font-weight: bold;
     font-size: $type-size-3;
 
