--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,7 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 @import url(https://fonts.googleapis.com/css2?family=Righteous&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Bungee&display=swap);
 
 
 //https://github.com/mmistakes/minimal-mistakes/issues/1219
