--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -26,7 +26,7 @@
     // font-family: $sans-serif-narrow;
     //font-family: 'Jeju Myeongjo', serif;
     //font-family: 'Righteous', cursive;
-    font-family: 'Bungee', cursive;
+    font-family: 'SDSamliphopangche_Outline';
     //font-weight: bold;
     font-size: $type-size-3;
 
