--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -47,7 +47,8 @@
 
 .archive__item-title {
   margin-bottom: 0.9em;
-  font-family: $sans-serif-narrow;
+  //font-family: $sans-serif-narrow;
+  font-family: 'Noto Serif KR', serif;
   //padding-bottom: 0.5em;
   line-height: 1.5;
   overflow: hidden;
