--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -47,6 +47,7 @@
 
 .archive__item-title {
   margin-top: -5px;
+  margin-bottom: -5px;
   //margin-bottom: 0.9em;
   //font-family: $sans-serif-narrow;
   font-family: 'Noto Serif KR', serif;
