--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -60,7 +60,7 @@
   line-height: 1.5;
   overflow: hidden;
   text-overflow: ellipsis;
-  //font-size: x-large;
+  font-size: $type-size-2;
   
   
 
