--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -13,9 +13,10 @@
 
   &__inner-wrap {
     @include clearfix;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1em;
+    // margin-left: auto;
+    // margin-right: auto;
+    margin: 15px auto 15px auto;
+    //padding: 1em;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
