--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -16,7 +16,7 @@
     // margin-left: auto;
     // margin-right: auto;
     margin: 15px auto 15px auto;
-    //padding: 1em;
+    padding-left: 15px;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
