--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -50,6 +50,34 @@
   }
 }
 
+.archive__item-categories {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  //margin-bottom: 0.9em;
+  //font-family: $sans-serif-narrow;
+  font-family: 'Noto Serif KR', serif;
+  padding-bottom: 0.5em;
+  line-height: 1.5;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: $type-size-5;
+
+  a[rel="permalink"]::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  a + a {
+    opacity: 0.5;
+  }
+
+}
+
+
 .archive__item-title {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -61,6 +89,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: $type-size-2;
+
+
   
   
 
