--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -52,11 +52,11 @@
 
 .archive__item-categories {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 5px;
   //margin-bottom: 0.9em;
   //font-family: $sans-serif-narrow;
   font-family: 'Noto Serif KR', serif;
-  padding-bottom: 0.5em;
+  //padding-bottom: 0.5em;
   line-height: 1.5;
   overflow: hidden;
   text-overflow: ellipsis;
