--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -2,6 +2,12 @@
    MASTHEAD
    ========================================================================== */
 
+//해당 요소 눈으로 보여줌
+// border-top: 5px dashed green;
+// border-right: 5px solid blue;
+// border-bottom: 5px dotted red;
+// border-left: 5px double black;
+
 .masthead {
   position: relative;
   border-bottom: 1px solid $border-color;
@@ -30,6 +36,7 @@
     font-family: 'SDSamliphopangche_Outline';
     //font-weight: bold;
     font-size: $type-size-3;
+    
 
     @include breakpoint($x-large) {
       max-width: $max-width;
@@ -62,6 +69,7 @@
 .site-subtitle {
   display: block;
   font-size: $type-size-8;
+  
 }
 
 .masthead__menu {
@@ -70,12 +78,16 @@
   margin-right: 0;
   width: 100%;
   clear: both;
+  
+  
 
   .site-nav {
     margin-left: 0;
     @include breakpoint($small) {
       float: right;
     }
+    
+    
   }
 
   ul {
@@ -83,6 +95,8 @@
     padding: 0;
     clear: both;
     list-style-type: none;
+    
+    
   }
 }
 
@@ -95,4 +109,5 @@
     padding-right: 2em;
     font-weight: 700;
   }
+  
 }
