--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,8 +29,13 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Bungee&display=swap);
+
+//
 @import url(https://fonts.googleapis.com/css2?family=Jua&family=Song+Myung&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Single+Day&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap);
+
 
 // $sans-serif: 'Noto Serif KR', serif;
 
