--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -73,17 +73,18 @@ layout: default
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
     <div class="page__related">
-      <h4 class="page__related-title">{{  "You upupupupupup" }}</h4>
+      <h4 class="page__related-title">{{  "Recent Posts" }}</h4>
       <div class="grid__wrapper">
-        {% for post in site.related_posts limit:8 %}
-          {% include archive-single.html type="list" %}  <!-- include는 해당 파일을 포함시키는 거고, type은 그리는 표현방식 grid는 사각형으로 나열하는 느낌이고 list도 있음-->
+        {% for post in site.related_posts limit: 5 %}
+          {% assign nextIndex = forloop.index0 | plus: 1 %} <!-- 이 코드는 1234 이렇게 숫자 인덱스를 붙이기 위한 방법 반대로 minus도 가능함-->
+          {% include archive-single.html type="list" number = nextIndex %}  <!-- include는 해당 파일을 포함시키는 거고, type은 그리는 표현방식 grid는 사각형으로 나열하는 느낌이고 list도 있음-->
         {% endfor %}
       </div>
     </div>
   {% comment %}<!-- otherwise show recent posts if no related when `related: true` -->{% endcomment %}
   {% elsif page.id and page.related %}
     <div class="page__related">
-      <h4 class="page__related-title">{{  "You downdowndown" }}</h4>
+      <h4 class="page__related-title">{{  "Recent Posts2222" }}</h4>
       <div class="grid__wrapper">
         {% for post in site.posts limit:4 %}
           {% if post.id == page.id %}
