--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -43,7 +43,7 @@
   font-size: $type-size-2;//home화면의 Recent Posts의 폰트 크기
   color: $rss-color;
   border-bottom: 1px solid $border-color;
-  font-family: 'SDSamliphopangche_Outline';
+  font-family: 'IropkeBatangM';
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
