--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -45,10 +45,13 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face{ 
   font-family:'IropkeBatangM'; 
-  src:url('fonts/IropkeBatangM.eot'); 
-  src:url('fonts/IropkeBatangM.woff') format(‘woff’); 
+  src:local('assets/fonts/IropkeBatangM.eot'); 
+  src:local('assets/fonts/IropkeBatangM.woff') format('woff'); 
+  font-weight: normal;
+  font-style: normal;
 }
 
 
