--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -93,7 +93,7 @@
   margin-bottom: 0px;
   //margin-bottom: 0.9em;
   //font-family: $sans-serif-narrow;
-  font-family: 'IropkeBatangM';
+  font-family: 'Noto Serif KR', serif;
   //padding-bottom: 0.5em;
   line-height: 1.5;
   overflow: hidden;
