--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -66,6 +66,7 @@ body {
       clear: both;
     }
   }
+  font-family: "IropkeBatangM";
 }
 
 .page__title {
@@ -284,6 +285,7 @@ body {
   margin-top: 2em;
   color: $muted-text-color;
   font-family: $sans-serif;
+  font-family: "IropkeBatangM";
   font-size: $type-size-6;
 
   p {
