--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,14 +46,12 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
   font-style: normal;
 }
 
-@font-face{ 
-  font-family:'IropkeBatangM'; 
-  src:local('assets/fonts/IropkeBatangM.eot'); 
-  src:local('assets/fonts/IropkeBatangM.woff') format('woff'); 
+@font-face {
+  font-family: "IropkeBatangM";
+  src: url("../fonts/IropkeBatangM.ttf");
   font-weight: normal;
   font-style: normal;
 }
-
 
 // font-family: 'Jua', sans-serif;
 // font-family: 'Song Myung', serif;
@@ -72,12 +70,12 @@ html {
   }
 
   @include breakpoint($x-large) {
-    font-size: 18px; // change to whatever
+    font-size: 16px; // change to whatever
   }
 }
 
 .highlight {
-  font-family: $monospace;
+  font-family: 'IropkeBatangM';
   font-size: $type-size-4-5;
 }
 
